--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"react-router-dom": "^6.23.1",
 		"react-scripts": "5.0.1",
 		"react-select": "^5.8.0",
+		"react-spinners": "^0.13.8",
 		"react-toastify": "^9.1.2",
 		"stream": "^0.0.2",
 		"stream-browserify": "^3.0.0",
