--- a/package.json
+++ b/package.json
@@ -1,87 +1,86 @@
 {
-	"name": "sababa",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "react-app-rewired start",
-		"build": "react-app-rewired build",
-		"test": "react-app-rewired test",
-		"eject": "react-scripts eject"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@hookform/resolvers": "^2.9.11",
-		"@reduxjs/toolkit": "^1.9.3",
-		"@thirdweb-dev/react": "^4.6.28",
-		"@thirdweb-dev/sdk": "^4.0.89",
-		"axios": "^1.7.2",
-		"browserify-zlib": "^0.2.0",
-		"buffer": "^6.0.3",
-		"crypto-browserify": "^3.12.0",
-		"css-loader": "^6.7.3",
-		"dom": "^0.0.3",
-		"dotenv-webpack": "^8.0.1",
-		"flag-icon-css": "^4.1.7",
-		"https-browserify": "^1.0.0",
-		"humps": "^2.0.1",
-		"install": "^0.13.0",
-		"js-cookie": "^3.0.5",
-		"jsonwebtoken": "^9.0.0",
-		"libphonenumber-js": "^1.10.33",
-		"moment": "^2.29.4",
-		"moment-timezone": "^0.5.43",
-		"npm": "^9.6.2",
-		"postcss-loader": "^7.1.0",
-		"postcss-preset-env": "^8.0.1",
-		"process": "^0.11.10",
-		"react": "^18.3.1",
-		"react-app-rewired": "^2.2.1",
-		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.43.7",
-		"react-infinite-scroll-component": "^6.1.0",
-		"react-phone-number-input": "^3.2.23",
-		"react-query": "^3.39.3",
-		"react-redux": "^7.2.8",
-		"react-responsive-carousel": "^3.2.23",
-		"react-router-dom": "^6.23.1",
-		"react-scripts": "5.0.1",
-		"react-select": "^5.8.0",
-		"react-spinners": "^0.13.8",
-		"react-toastify": "^9.1.2",
-		"stream": "^0.0.2",
-		"stream-browserify": "^3.0.0",
-		"stream-http": "^3.2.0",
-		"style-loader": "^3.3.2",
-		"tailwindcss-transforms": "^2.2.0",
-		"tailwindcss-transitions": "^2.2.0",
-		"thirdweb": "^5.27.0",
-		"util": "^0.12.5",
-		"yup": "^1.0.2"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.21.3",
-		"@babel/preset-env": "^7.20.2",
-		"@babel/preset-react": "^7.18.6",
-		"babel-loader": "^9.1.2",
-		"react-app-rewired": "^2.2.1",
-		"tailwindcss": "^3.2.7",
-		"webpack": "^5.91.0",
-		"webpack-cli": "^5.0.1",
-		"webpack-dev-server": "^4.12.0"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "onchain-summer-buildathon-frontend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@thirdweb-dev/react": "^4.6.28",
+    "@thirdweb-dev/sdk": "^4.0.89",
+    "axios": "^1.7.2",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.7.3",
+    "dom": "^0.0.3",
+    "dotenv-webpack": "^8.0.1",
+    "flag-icon-css": "^4.1.7",
+    "https-browserify": "^1.0.0",
+    "humps": "^2.0.1",
+    "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
+    "libphonenumber-js": "^1.10.33",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "npm": "^9.6.2",
+    "postcss-loader": "^7.1.0",
+    "postcss-preset-env": "^8.0.1",
+    "process": "^0.11.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.43.7",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-phone-number-input": "^3.2.23",
+    "react-query": "^3.39.3",
+    "react-redux": "^7.2.8",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.2",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.3.2",
+    "tailwindcss-transforms": "^2.2.0",
+    "tailwindcss-transitions": "^2.2.0",
+    "thirdweb": "^5.27.0",
+    "util": "^0.12.5",
+    "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.2.7",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.12.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
